--- a/m.home.html
+++ b/m.home.html
@@ -210,14 +210,15 @@ document.addEventListener('DOMContentLoaded', function () {
                <div class="header-chip svelte-1p6zve4" style="margin-top:40px;">
                   <span class="violator-frameless typography-family-violator" style="font-size: 14px;font-weight: 400;letter-spacing: -0.022em;color: #D44502;">Disponible próximamente este año</span>
                </div>
-               <h2 style="opacity: 0.936709;background-color: rgba(0,0,0,0);display: flex;position: relative;z-index: 1;font-size: 72px;line-height: 1.484375;font-weight: 700;letter-spacing: -0.0045em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;color: rgb(10, 10, 8);">Kingdom Hall Attendant</h2>
-               <p class="" style="font-size: 26px;line-height: 1.381002381;font-weight: 700;letter-spacing: .011em;margin-top: -35px;text-transform: uppercase;background-image: -webkit-linear-gradient(0deg,#ff279c 25%,#ff981f 75%); -webkit-background-clip: text;-webkit-text-fill-color: transparent;">Edition 1</p>
+               <h2 style="opacity: 0.936709;background-color: rgba(0,0,0,0);display: flex;position: relative;z-index: 1;font-size: 72px;line-height: -4;font-weight: 700;letter-spacing: -0.0045em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;color: rgb(10, 10, 8);">Kingdom Hall Attendant</h2>
+               <p class="" style="font-size: 26px;line-height: 1.381002381;font-weight: 700;letter-spacing: .011em;margin-top: -35px;text-transform: uppercase;background-image: -webkit-linear-gradient(0deg,#ff279c 25%,#ff981f 75%); -webkit-background-clip: text;-webkit-text-fill-color: transparent;margin-top: 5px;">Edition 1</p>
 
                <p style="margin-top: 40px;max-width: 865px;margin-left: auto;margin-right: auto;font-size: 22px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">Una aplicación multiplataforma, lo que significa que trabaja sin problemas en cualquier sistema operativo. Diseñada con esmero especialmente para ancianos y sus diligentes siervos ministeriales, así como para los superintendentes de circuito. Ha sido meticulosamente desarrollada para simplificar, elaborar y fortalecer la gestión de todas las asignaciones y responsabilidades de la congregación. Además, hará que el trabajo de los superintendentes de circuito sea mucho más eficiente al facilitar la recopilación de registros y estadísticas durante sus visitas a las congregaciones.</p>
 
                 <div class="buttons-spacer">
-                  <a role="button" href="https://github.com/livrasand/Kingdom-Hall-Attendant" class="button style-accent   svelte-nqc07q" style="cursor:pointer;border-radius: 980px;background: #0071e3;color: #fff;border-color: rgba(0,0,0,0);display: inline-block;font-size: 16px;line-height: 1.33337;font-weight: 400;letter-spacing: -.01em;min-width: 25px;padding-left: 20px;padding-right: 20px;padding-top: 6px;padding-bottom: 6px;--sk-button-margin-horizontal: 10px;--sk-button-margin-vertical: 10px;">Ayuda con el desarrollo en GitHub
-                  </a>  
+                  <a role="button" href="https://github.com/livrasand/Kingdom-Hall-Attendant" class="item svelte-10xsmud selected" data-sveltekit-preload-data="hover" style="margin-top:15px;width:125px;background: #0071e3;color: #fff;border-color: rgba(0,0,0,0);display: inline-block;font-size: 16px;font-weight: 400;width: 100%;">
+                              <span>Ayuda con el desarrollo en GitHub</span>
+                              </a>  
                </div>   
                <div class="page-section-inner svelte-xz0hqw">
                   <div class="design-section-center">
@@ -258,22 +259,37 @@ document.addEventListener('DOMContentLoaded', function () {
                <h2 style="font-size:70px;">Attendant Zoom</h2>
                <p class="" style="font-size: 33px;line-height: 1.381002381;font-weight: 700;letter-spacing: .011em;margin-top: -10px;background-image: linear-gradient(90deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 60%); -webkit-background-clip: text;-webkit-text-fill-color: transparent;">2023 Summer Edition</p>
                <p style="margin-top: 40px;max-width: 665px;margin-left: auto;margin-right: auto;font-size:20px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">Facilita la compartición de contenido multimedia durante reuniones, ya sea en plataformas de videoconferencias o en el Salón del Reino, ofreciendo una adaptación perfecta para encuentros híbridos, remotos o presenciales. Nuestra aplicación es completamente gratuita y no incluye publicidad.</p>
-<p style="margin-top: 40px;max-width: 665px;margin-left: auto;margin-right: auto;font-size:20px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;margin-bottom: 60px;">Exclusivamente disponible para Windows, esta aplicación se presenta como una excelente alternativa a JW Library. Está diseñada especialmente para aquellos dispositivos que no cuentan con la compatibilidad de JW Library, no tienen acceso a una tienda de aplicaciones o experimentan lentitud o bloqueos al usar JW Library en sus computadoras. Simplifica tus reuniones y estudios con nuestra herramienta de confianza.</p>       
-               <div class="buttons-spacer" style="text-align:center;width: 100%;">
-                  <a role="button" href="https://github.com/livrasand/GoAttendant-Website/releases/download/v15.07.2023/Attendant.Zoom.Setup.exe" class="button style-accent   svelte-nqc07q" style="cursor:pointer;width: 100%;">Descargar para Windows
-                  </a>                  
-                  <a role="button" href="https://github.com/livrasand/GoAttendant-Website/raw/main/goattendant-certificates.zip" class="button style-accent   svelte-nqc07q" style="cursor:pointer;background-color: var(--fds-subtle-fill-secondary);color: var(--fds-text-secondary);border: none;">Descarga el Certificado de Firma de Código y Exclusión de SmartScreen
+<p style="margin-top: 40px;max-width: 665px;margin-left: auto;margin-right: auto;font-size:20px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;margin-bottom: 20px;">Exclusivamente disponible para Windows, esta aplicación se presenta como una excelente alternativa a JW Library. Está diseñada especialmente para aquellos dispositivos que no cuentan con la compatibilidad de JW Library, no tienen acceso a una tienda de aplicaciones o experimentan lentitud o bloqueos al usar JW Library en sus computadoras. Simplifica tus reuniones y estudios con nuestra herramienta de confianza.</p>           
+              
+    <div class="page-section-inner svelte-xz0hqw">
+                  <div class="design-section-center">
+                     <div class="feature-cards-container svelte-ikir9u">
+                        <button class="feature-card svelte-1chqpt0">
+                           <center>
+                              <img src="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/attendant-zoom.png" width="100%">
+                              <a role="button" href="https://github.com/livrasand/GoAttendant-Website/releases/download/v15.07.2023/Attendant.Zoom.Setup.exe" target="_blank" class="item svelte-10xsmud selected" data-sveltekit-preload-data="hover" style="margin-top:15px;width:125px;background: #1d1d1f;color: #fff;">
+                              <span>Descargar</span>
+                              </a>
+                              <a role="button" href="https://github.com/livrasand/GoAttendant-Website/raw/main/goattendant-certificates.zip" class="button style-accent   svelte-nqc07q" style="cursor:pointer;background-color: var(--fds-subtle-fill-secondary);color: var(--fds-text-secondary);border: none;margin-top: 10px;">Descarga CFCEES 
                   </a>
-               </div>      
-               <section id="public" style="text-align: center;width: 100%;font-family: 'Space Mono', monospace;border: none;margin-top: -30px;">
-    <h2>SHA-256 Checksum</h2>
-    <h3 class="selectable" style="margin-top:-10px;">2e1cd869f16b32494db561195469075b443c5b244fa947b1caf78a1fc3f224d5</h3>
-    </section>            
-               <div class="design-image svelte-18mfiy4">
-                  <picture>
-                     <img alt="Windows 11 wallpaper" class="files-wallpaper svelte-18mfiy4" src="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/attendant-zoom.png" style="width: 100%;">
-                  </picture>
+                               <section id="public" style="text-align: center;width: 100%;font-family: 'Space Mono', monospace;border: none;margin-top: -15px;margin-bottom: -30px;">
+    <h2 style="font-size:12px;">SHA-256 Checksum</h2>
+    <h3 class="selectable" style="margin-top:-10px;font-size: 10px;">2e1cd869f16b32494db561195469075b443c5b244fa947b1caf78a1fc3f224d5</h3>
+    </section>   
+                              <br><br>
+                              <div class="tc mh2 mv3 pv2">
+                                 <span class="db ttu f7 b tracked mid-gray" style="font-size: 1rem;text-transform: uppercase;color: #555;letter-spacing: .1em;font-weight: bold;">Disponible solo para</span><br>
+                                 <span class="db nowrap">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="v-mid mh1 " width="32" height="32" viewBox="0 0 32 32">
+                                       <path fill="#646675" d="M4.008 16.2L4 8.398l9.6-1.303V16.2H4.008zM15.2 6.862L27.997 5v11.2H15.2V6.862zM28 17.8L27.997 29 15.2 27.2v-9.4H28zm-14.4 9.197l-9.592-1.315V17.8H13.6v9.197z"></path>
+                                    </svg>                                    
+                                 </span>
+                              </div>
+                           </center>
+                        </button>                        
+                  </div>
                </div>
+            </div>   
             </div>
          </section>
       </div>
