--- a/index.html
+++ b/index.html
@@ -173,8 +173,9 @@
                <p style="margin-top: 40px;max-width: 865px;margin-left: auto;margin-right: auto;font-size: 28px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">Una aplicación multiplataforma, lo que significa que trabaja sin problemas en cualquier sistema operativo. Diseñada con esmero especialmente para ancianos y sus diligentes siervos ministeriales, así como para los superintendentes de circuito. Ha sido meticulosamente desarrollada para simplificar, elaborar y fortalecer la gestión de todas las asignaciones y responsabilidades de la congregación. Además, hará que el trabajo de los superintendentes de circuito sea mucho más eficiente al facilitar la recopilación de registros y estadísticas durante sus visitas a las congregaciones.</p>
 
                 <div class="buttons-spacer">
-                  <a role="button" href="https://github.com/livrasand/Kingdom-Hall-Attendant" class="button style-accent   svelte-nqc07q" style="cursor:pointer;border-radius: 980px;background: #0071e3;color: #fff;border-color: rgba(0,0,0,0);display: inline-block;font-size: 16px;line-height: 1.33337;font-weight: 400;letter-spacing: -.01em;min-width: 25px;padding-left: 20px;padding-right: 20px;padding-top: 6px;padding-bottom: 6px;--sk-button-margin-horizontal: 10px;--sk-button-margin-vertical: 10px;">Ayuda con el desarrollo en GitHub
-                  </a>  
+                 <a role="button" href="https://github.com/livrasand/Kingdom-Hall-Attendant" class="item svelte-10xsmud selected" data-sveltekit-preload-data="hover" style="margin-top:15px;width:125px;background: #0071e3;color: #fff;border-color: rgba(0,0,0,0);display: inline-block;font-size: 16px;font-weight: 400;width: 100%;">
+                              <span>Ayuda con el desarrollo en GitHub</span>
+                              </a>  
                </div>   
                <div class="page-section-inner svelte-xz0hqw">
                   <div class="design-section-center">
@@ -213,7 +214,7 @@
 <div class="grid-item span-12-col h-align-center grid-item-draw" data-anim-scroll-group="draw" data-analytics-section-engagement="name:draw" style="--image-shadow: 117px;--tile-content-padding: 39px;grid-column: span 12;background-color: #fff;display: flex;flex-direction: column;position: relative;box-sizing: border-box;overflow: hidden;border-radius: 30px;min-height: auto;z-index: 0;width: 88%;text-align: left;margin-top: 40px;margin-bottom: 10px;">
             <div class="grid-item-header" style="ox-sizing: border-box;padding: 40px;padding-bottom: 0;">
                <h3 class="grid-item-headline typography-grid-item-headline" style="color: #D44502;font-size: 21px;line-height: 1.1904761905;font-weight: 600;letter-spacing: .011em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">
-                  🔒 Máxima seguridad y privacidad
+                  Máxima seguridad y privacidad
                </h3>
                <p class="grid-item-copy typography-grid-item-copy" style="margin-top: .2em;max-width: 655px;font-size: 19px;line-height: 1.4211026316;font-weight: 600;letter-spacing: .012em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;color: #1d1d1f;font-style: normal;">Utiliza una encriptación avanzada para garantizar que los datos de la congregación y de los publicadores permanezcan confidenciales y seguros. No se requiere conexión a servidores externos, como Dropbox o Google Drive, ni la creación de cuentas, lo que asegura que toda la información se mantenga localmente y fuera del alcance de terceros no autorizados.</p>
             </div>
@@ -224,7 +225,7 @@
          <div class="grid-item" style="margin-right: 20px;">
             <div class="grid-item-header">
                <h3 class="grid-item-headline typography-grid-item-headline" style="color: #D44502;font-size: 21px;line-height: 1.1904761905;font-weight: 600;letter-spacing: .011em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">
-                  🎉 Sin publicidad, totalmente gratuito
+                  Sin publicidad, totalmente gratuito
                </h3>
                <p class="grid-item-copy typography-grid-item-copy" style="margin-top: .2em;max-width: 655px;font-size: 19px;line-height: 1.4211026316;font-weight: 600;letter-spacing: .012em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;color: #1d1d1f;font-style: normal;">En Kingdom Hall Attendant, nos enorgullece ofrecer una experiencia sin distracciones ni anuncios molestos. La aplicación es completamente gratuita y no contiene publicidad, permitiéndote enfocarte plenamente en las tareas congregacionales.</p>
             </div>
@@ -234,7 +235,7 @@
          <div class="grid-item">
             <div class="grid-item-header">
                <h3 class="grid-item-headline typography-grid-item-headline" style="color: #D44502;font-size: 21px;line-height: 1.1904761905;font-weight: 600;letter-spacing: .011em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">
-                  🚫 Sin necesidad de cuentas
+                  Sin necesidad de cuentas
                </h3>
                <p class="grid-item-copy typography-grid-item-copy" style="margin-top: .2em;max-width: 655px;font-size: 19px;line-height: 1.4211026316;font-weight: 600;letter-spacing: .012em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;color: #1d1d1f;font-style: normal;">Olvídate de tediosos registros o creación de cuentas. Kingdom Hall Attendant se destaca por su simplicidad; puedes comenzar a usarlo de inmediato, sin trabas ni complicaciones.</p>
             </div>
@@ -247,23 +248,37 @@
                <h2 style="font-size:70px;">Attendant Zoom</h2>
                <p class="" style="font-size: 33px;line-height: 1.381002381;font-weight: 700;letter-spacing: .011em;margin-top: -10px;background-image: linear-gradient(90deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 60%); -webkit-background-clip: text;-webkit-text-fill-color: transparent;">2023 Summer Edition</p>
                <p style="margin-top: 40px;max-width: 665px;margin-left: auto;margin-right: auto;font-size:20px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;">Facilita la compartición de contenido multimedia durante reuniones, ya sea en plataformas de videoconferencias o en el Salón del Reino, ofreciendo una adaptación perfecta para encuentros híbridos, remotos o presenciales. Nuestra aplicación es completamente gratuita y no incluye publicidad.</p>
-<p style="margin-top: 40px;max-width: 665px;margin-left: auto;margin-right: auto;font-size:20px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;margin-bottom: 60px;">Exclusivamente disponible para Windows, esta aplicación se presenta como una excelente alternativa a JW Library. Está diseñada especialmente para aquellos dispositivos que no cuentan con la compatibilidad de JW Library, no tienen acceso a una tienda de aplicaciones o experimentan lentitud o bloqueos al usar JW Library en sus computadoras. Simplifica tus reuniones y estudios con nuestra herramienta de confianza.</p>       
-               <div class="buttons-spacer">
-                  <a role="button" href="https://github.com/livrasand/GoAttendant-Website/releases/download/v15.07.2023/Attendant.Zoom.Setup.exe" class="button style-accent   svelte-nqc07q" style="cursor:pointer;">Descargar para Windows
-                  </a>                  
-                  <a role="button" href="https://github.com/livrasand/GoAttendant-Website/raw/main/goattendant-certificates.zip" class="button style-accent   svelte-nqc07q" style="cursor:pointer;background-color: var(--fds-subtle-fill-secondary);color: var(--fds-text-secondary);border: none;">Descarga el Certificado de Firma de Código y Exclusión de SmartScreen
+<p style="margin-top: 40px;max-width: 665px;margin-left: auto;margin-right: auto;font-size:20px;line-height: 1.2858342857;font-weight: 400;letter-spacing: .007em;font-family: SF Pro Display Regular,SF Pro Icons,Helvetica Neue,Helvetica,Arial,sans-serif;margin-bottom: 20px;">Exclusivamente disponible para Windows, esta aplicación se presenta como una excelente alternativa a JW Library. Está diseñada especialmente para aquellos dispositivos que no cuentan con la compatibilidad de JW Library, no tienen acceso a una tienda de aplicaciones o experimentan lentitud o bloqueos al usar JW Library en sus computadoras. Simplifica tus reuniones y estudios con nuestra herramienta de confianza.</p>       
+                  
+               <div class="page-section-inner svelte-xz0hqw">
+                  <div class="design-section-center">
+                     <div class="feature-cards-container svelte-ikir9u">
+                        <button class="feature-card svelte-1chqpt0">
+                           <center>
+                              <img src="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/attendant-zoom.png" width="100%">
+                              <a role="button" href="https://github.com/livrasand/GoAttendant-Website/releases/download/v15.07.2023/Attendant.Zoom.Setup.exe" target="_blank" class="item svelte-10xsmud selected" data-sveltekit-preload-data="hover" style="margin-top:15px;width:125px;background: #1d1d1f;color: #fff;">
+                              <span>Descargar</span>
+                              </a>
+                              <a role="button" href="https://github.com/livrasand/GoAttendant-Website/raw/main/goattendant-certificates.zip" class="button style-accent   svelte-nqc07q" style="cursor:pointer;background-color: var(--fds-subtle-fill-secondary);color: var(--fds-text-secondary);border: none;margin-top: 10px;">Descarga el Certificado de Firma de Código y de Exclusión de SmartScreen 
                   </a>
-               </div>      
-               <section id="public" style="text-align: center;width: 100%;font-family: 'Space Mono', monospace;border: none;margin-top: -30px;">
+                               <section id="public" style="text-align: center;width: 100%;font-family: 'Space Mono', monospace;border: none;margin-top: -15px;margin-bottom: -30px;">
     <h2>SHA-256 Checksum</h2>
     <h3 class="selectable" style="margin-top:-10px;">2e1cd869f16b32494db561195469075b443c5b244fa947b1caf78a1fc3f224d5</h3>
-    </section>            
-               <div class="design-image svelte-18mfiy4">
-                  <picture>
-                     <img alt="Windows 11 wallpaper" class="files-wallpaper svelte-18mfiy4" src="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/attendant-zoom.png">
-                  </picture>
+    </section>   
+                              <br><br>
+                              <div class="tc mh2 mv3 pv2">
+                                 <span class="db ttu f7 b tracked mid-gray" style="font-size: 1rem;text-transform: uppercase;color: #555;letter-spacing: .1em;font-weight: bold;">Disponible solo para</span><br>
+                                 <span class="db nowrap">
+                                    <svg xmlns="http://www.w3.org/2000/svg" class="v-mid mh1 " width="32" height="32" viewBox="0 0 32 32">
+                                       <path fill="#646675" d="M4.008 16.2L4 8.398l9.6-1.303V16.2H4.008zM15.2 6.862L27.997 5v11.2H15.2V6.862zM28 17.8L27.997 29 15.2 27.2v-9.4H28zm-14.4 9.197l-9.592-1.315V17.8H13.6v9.197z"></path>
+                                    </svg>                                    
+                                 </span>
+                              </div>
+                           </center>
+                        </button>                        
+                  </div>
                </div>
-            </div>
+            </div>   
          </section>
       </div>
    </body>
