--- a/jwpub-catalog.html
+++ b/jwpub-catalog.html
@@ -19,8 +19,8 @@
             <nav class="inner svelte-10xsmud">
                <a class="logo svelte-10xsmud" href="" data-sveltekit-preload-data="hover">
                   <picture>
-                     <img alt="GoAttendantLogo" class="logo-image svelte-10xsmud" height="32" src="https://raw.githubusercontent.com/livrasand/GoAttendant-Website/main/GoAttendantFavicon.png" width="32">
-                  </picture>
+                     <img alt="GoAttendantLogo" class="logo-image svelte-10xsmud" height="32" src="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/favicon.png" width="32">
+                 </picture>
                </a>
                <div class="divider svelte-10xsmud"></div>
                <a class="item svelte-10xsmud"  data-sveltekit-preload-data="hover" href="index.html">
