--- a/jwpub-catalog.html
+++ b/jwpub-catalog.html
@@ -9,7 +9,7 @@
       <meta content="Attendant Zoom, Kingdom Hall Attendant, GoAttendant, GoAttendant Team, JWPUB Catalog, JWPUB." name="keywords">
       <meta content="GoAttendant Team" name="author">
       <meta content="#005fb8" name="theme-color">
-      <link rel="icon" href="https://raw.githubusercontent.com/livrasand/GoAttendant-Website/main/GoAttendantFavicon.png" />
+      <link rel="icon" href="https://raw.githack.com/livrasand/livrasand.github.io/main/cdn/images/favicon.png" />
       <link rel="stylesheet" type="text/css" href="styles.css">
       <link rel="stylesheet" type="text/css" href="colors.css">
    </head>
