--- a/jwpub-catalog.html
+++ b/jwpub-catalog.html
@@ -38,10 +38,17 @@
             </nav>
          </header>
          <main class="download-page svelte-1omhc40">
-            <h2 class="text-block type-title-large  svelte-zxj483" style="text-align: center;">Bienvenido</h2>
-            <p style="color: var(--fds-text-secondary);font-size: 1.6rem;font-weight: 400;margin-block: 12px 24px;">Bienvenido al catálogo de publicaciones para JW Library de GoAttendant (JWPUB Catalog). En este lugar, tendrá acceso a las últimas creaciones del equipo de GoAttendant. Por favor, tenga en cuenta que todos los documentos de nuestro catálogo están diseñados para funcionar de manera óptima en dispositivos con sistemas operativos Windows, Apple y Android, con la instalación previa de JW Library. Le invitamos cordialmente a explorar nuestro catálogo y disfrutar de nuestras creaciones. Algunas publicaciones pueden haber perdido su funcionalidad con el tiempo, y es posible que no estén en nuestras prioridades de reparación, ya que podrían considerarse obsoletas.</p>
+            <h2 class="text-block type-title-large  svelte-zxj483">Bienvenido</h2>
+<p style="color: var(--fds-text-secondary);font-size: 1.6rem;font-weight: 400;margin-block: 12px 24px;">El administrador de JWPUBs personalizados para JW Library que hace que sea extremadamente sencillo encontrar, instalar y mantener JWPUBs actualizados. <b></b>¿Quieres crear un JWPUB personalizado? ¡Usa <a href="https://github.com/livrasand/Reviw">Reviw</a>!</b> Le recomendamos usar el buscador de abajo y buscar JWPUB's similares. Si encuentra uno que se asemeje al suyo, le sugerimos considerar la posibilidad de mejorar el JWPUB existente en lugar de crear uno nuevo. Fomentamos la colaboración y la mejora continua, especialmente si su JWPUB es de naturaleza simple. Ser un mantenedor y añadir funcionalidades o ajustar un JWPUB existente puede ser una opción valiosa. Su contribución será apreciada.</p>
+<div class="search-container">
+  <input type="text" id="search-input" placeholder="Buscar publicaciones...">
+  <button onclick="searchPublications()">Buscar</button>
+</div>
 
-            <details data-view-component="true" class="details-overlay">
+            <section class="download-sources svelte-1omhc40">
+               <div id="publications-container"></div>
+               <p class="svelte-1omhc40">¿Tienes problemas para descargar alguna publicación o encontraste algún error? Háznoslo saber en <b>jwpubcatalog@gmail.com</b>.</p>
+               <details data-view-component="true" class="details-overlay">
   <summary role="button" data-view-component="true" class="btn-primary btn-sm btn">    Lee nuestro mensaje de uso legítimo (Carta legal)
   </summary>
   <div data-view-component="true">
@@ -74,15 +81,6 @@ Quedo a su disposición para cualquier pregunta o aclaración que puedan necesit
 Todas las publicaciones creadas por GoAttendant Team dan crédito al propietario de los derechos de autor, a la Watch Tower Bible and Tract Society of Pennsylvania. No buscamos obtener beneficios económicos de contenido infractor, y nuestra intención no es infringir los derechos de autor de sus propietarios. Para obtener información adicional sobre este tema, estamos dispuestos a discutir lo que constituye un uso legítimo.</p>
   </div>
 </details>
-<p style="color: var(--fds-text-secondary);font-size: 1.6rem;font-weight: 400;margin-block: 12px 24px;">Le recomendamos usar el buscador de abajo y buscar JWPUB's similares. Si encuentra uno que se asemeje al suyo, le sugerimos considerar la posibilidad de mejorar el JWPUB existente en lugar de crear uno nuevo. Fomentamos la colaboración y la mejora continua, especialmente si su JWPUB es de naturaleza simple. Ser un mantenedor y añadir funcionalidades o ajustar un JWPUB existente puede ser una opción valiosa. Su contribución será apreciada.</p>
-<div class="search-container">
-  <input type="text" id="search-input" placeholder="Buscar publicaciones...">
-  <button onclick="searchPublications()">Buscar</button>
-</div>
-
-            <section class="download-sources svelte-1omhc40">
-               <div id="publications-container"></div>
-               <p class="svelte-1omhc40">¿Tienes problemas para descargar alguna publicación o encontraste algún error? Háznoslo saber en <b>jwpubcatalog@gmail.com</b>.</p>
             </section>
          </main>
       </div>
